# awaleGame

./: CMakeLists.txt  Doxyfile  README.md  main.c
client/include/: client.h
client/src/: client.c
doc/html/: annotated.html  awaleBoard_8h.html  awaleBoard_8h__dep__incl.map  awaleBoard_8h__dep__incl.md5  awaleBoard_8h__incl.map  awaleBoard_8h__incl.md5  awaleBoard_8h_source.html  classes.html  client_2include_2client_8h_source.html  dir_000005_000003.html  dir_2b32f7736d6a65027d17676f6279053c.html  dir_41e1742e44e2de38b3bc91f993fed282.html  dir_41e1742e44e2de38b3bc91f993fed282_dep.map  dir_41e1742e44e2de38b3bc91f993fed282_dep.md5  dir_5c23080e296bbe846f4ed2d01d7b595d.html  dir_a063914ab482288b7b0e1b2fca86158c.html  dir_a063914ab482288b7b0e1b2fca86158c_dep.map  dir_a063914ab482288b7b0e1b2fca86158c_dep.md5  dir_b565d458ba0ce2faccd0ea2cd60c04eb.html  dir_db3a54907829b36871118d03417739cd.html  files.html  game_8h.html  game_8h__incl.map  game_8h__incl.md5  game_8h_source.html  globals.html  globals_func.html  globals_type.html  graph_legend.html  index.html  list_8h.html  list_8h__dep__incl.map  list_8h__dep__incl.md5  list_8h__incl.map  list_8h__incl.md5  list_8h_source.html  menudata.js  server_2include_2client_8h.html  server_2include_2client_8h__dep__incl.map  server_2include_2client_8h__dep__incl.md5  (+27 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js  (+6 more)
doc/latex/: annotated.tex  awaleBoard_8h.tex  awaleBoard_8h__dep__incl.md5  awaleBoard_8h__incl.md5  files.tex  game_8h.tex  game_8h__incl.md5  list_8h.tex  list_8h__dep__incl.md5  list_8h__incl.md5  refman.tex  server_2include_2client_8h.tex  server_2include_2client_8h__dep__incl.md5  server_2include_2client_8h__incl.md5  server_8h.tex  server_8h__dep__incl.md5  server_8h__incl.md5  structAwaleBoard.tex  structClient.tex  structClient__coll__graph.md5  structGame.tex  structGame__coll__graph.md5  structList.tex  structList__coll__graph.md5  structNode.tex  structNode__coll__graph.md5
server/include/: awaleBoard.h  client.h  game.h  list.h  player.h  server.h
server/src/: awaleBoard.c  client.c  game.c  list.c  main.c  player.c  server.c
